intro and methods

--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 \begin{abstract}
 \onehalfspacing
 \noindent
-Policy-makers generally assume that climate change mitigation requires global scale governance. Conversely, recent studies suggest that decentralised approaches can better cope with climate problems. But despite the large social impact each solution implies, it is unclear which political arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements that vary across six dimensions. We find that institutional features have a substantial effect on support for climate treaties. Overall, Latin American elites prefer state-based solutions to global warming, but there is considerable heterogeneity across countries and elite types. Our results suggest novel ways to craft accountable, democratic climate change mitigation agreements, and also offer new insights on how to integrate interventions at the local and international levels.
+Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer state-based solutions to global warming, but there is considerable heterogeneity across countries and elite types. Our results suggest novel ways to craft accountable, democratic climate change mitigation agreements, and they offer new insights on how to integrate interventions at the local and international levels.
 
 \vspace{.5cm}
 
@@ -106,31 +106,38 @@ Over the last years, we have seen an emerging consensus about the causes and con
 
 Yet this consensus does not translate itself into effective political action. Global climate negotiations have progressed slowly under the guidelines of the United Nations Framework Convention on Climate Change (UNFCCC), and there is wide scepticism that multilateral talks will move faster in the next years \citep{cole2015advantages, hjerpe2015views}. As carbon dioxide emissions continue to increase, current efforts are likely to be insufficient to meet the Paris Agreement target of $2^{\circ}$C temperature rise above pre-industrial levels \citep{jordan2015emergence}. Existing research affirms that this unsatisfactory performance is partially due to institutional design \citep{ostrom2014polycentric, cole2015advantages}. For instance, multilateral forums downplay the domestic constraints political leaders experience when implementing strategies to reduce greenhouse gas emissions \citep{rayner2010eat}. Universal binding agreements also offer limited scope for experimentation, which hinders the ability for individuals to solve complex collective action problems \citep{de2014global}.
 
-More recently, scholars have argued that polycentric approaches provide a better `institutional fit' for natural resource systems \citep{turnheim2018innovating,berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages,aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the `tragedy of the commons', that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for interest groups \citep{turnheim2018innovating,ostrom2012nested,ostrom2014polycentric,sovacool2013adaptation}. 
+Recently, scholars have argued that polycentric approaches provide a better `institutional fit' for natural resource systems \citep{turnheim2018innovating,berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages,aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the `tragedy of the commons', that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for interest groups \citep{turnheim2018innovating,ostrom2012nested,ostrom2014polycentric,sovacool2013adaptation}. 
 
-Despite their potential advantages, two challenges may undermine the support for multilevel arrangements. On the one hand, pluralistic systems demand high levels of participation. Since climate change has diffuse benefits but concentrated costs, individuals have a strong incentive not to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. On the other hand, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain to encourage voluntary action. 
+Despite the potential advantages of polycentric arrangements, two challenges may undermine their popular support. First, polycentric systems demand constant civic participation at multiple government levels. But as climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
 
-Self-enforcing environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two requirements for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests. In that scenario, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
+Voluntary environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two requirements for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests. In that scenario, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
 
-We design a conjoint experiment to assess which type of climate change governance system Latin American elites are willing to support. Conjoint experiments allow respondents to evaluate two competing profiles that vary across multiple dimensions of interest, and under sensible assumptions, they can estimate the causal impact of each factor on the respondent's decision \citep{bansak2016economic, hainmueller2014causal}. In our survey, we asked 651 `elites' -- academics, members of the executive power, legislators, businesspeople, and members of non-governmental organisations -- to select their preferred agreement in 7 randomised binary choices. We recruited respondents from Argentina, Brazil, Bolivia, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru.
+We design a conjoint experiment to assess which climate change governance system Latin American elites are willing to support. In our survey, we asked 654 `elites' -- academics, members of the executive power, legislators, businesspeople, and members of non-governmental organisations -- to select their preferred agreement in 7 randomised binary choices. We recruited respondents from Argentina, Brazil, Bolivia, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru.
 
 In what follows, we describe our experimental methods and results. We then turn to two additional analyses, in which we disaggregate the responses according to country and elite type, and proceed to the concluding remarks.
 
 \section{Research Design}%
 \label{sec:research_design}
 
-We conducted our experiment in 10 Latin American countries. Latin America is the most biodiverse region in the world and it remains largely dependent on agriculture, thus global warming can severely disrupt the regional environment and economy \citep{jones2003potential, yang2018post}. Moreover, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work is still scarce. We fill this gap by including countries in South, Central, and North America where local elites have different stakes at climate change negotiations.
+We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are crucial actors in emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work is still scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
-The hypothetical climate change agreements includes six dimensions: 1) which organisation defines the rules; 2) how would conflicts be resolved; 3) what punishment should be applied to rule-breakers; 4) how should repeated violations be sanctioned; 5) which countries should bear the costs of the agreement; 6) how often should the agreement be renegotiated. The categories map conceptual differences between polycentric and state-led climate mitigation policies \citep{bechtel2013mass, ostrom1990governing}. Table~\ref{tab:categories} describes the values we included in each design principle. \\
+We use an original dataset compiled specifically for this study. The sampling process was as follows. From 1st of October to 5th of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. The survey proceeded in two steps. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
 
+After finishing this dataset, we started the surveying stage. From 12th of November to 5th of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
+
+The hypothetical climate change agreements includes six attributes: 1) which organisation defines the rules; 2) how would conflicts be resolved; 3) what punishment should be applied to rule-breakers; 4) how should repeated violations be sanctioned; 5) which countries should bear the costs of the agreement; 6) how often should the agreement be renegotiated. Table~\ref{tab:categories} describes the values we included in each treaty attribute. \\
+
+\newpage 
+
+\begin{footnotesize}
 \begin{longtable}{l|l}
-\caption{Design principles for climate change mitigation conjoint experiments} \label{tab:categories} \\
+\caption{\textbf{Design principles for climate change mitigation conjoint experiments}} \label{tab:categories} \\
 
 \hline \multicolumn{1}{c|}{\textbf{Attribute}} & \multicolumn{1}{c}{\textbf{Values}}\\ \hline 
 \endfirsthead 
 
 \multicolumn{2}{c}%
-{{\tablename \thetable{} Design principles for climate change mitigation conjoint experiments (\textit{cont.})}} \\
+{{\tablename \: \thetable{}: \textbf{Design principles for climate change mitigation conjoint experiments} (\textit{cont.})}} \\
 \hline \multicolumn{1}{c|}{\textbf{Attribute}} & \multicolumn{1}{c}{\textbf{Values}} \\ \hline 
 \endhead
 
@@ -156,6 +163,7 @@ Punishment & Imprisonment \\
 & Fines \\
 & Blacklist \\
 & None \\
+& \\
 Punishment for repeated violations & More penalty \\
 & Same \\
 & Less penalty \\
@@ -171,15 +179,21 @@ Renegotiation & Never \\
 & Five years \\
 & One year\\
 \end{longtable}
+\end{footnotesize}
 
-Our six principles correspond to a standard set of resolutions international treaties are expected to cover. However, the categories open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.\\
+The categories map the main conceptual differences between polycentric and state-led climate mitigation policies \citep{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.\\
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm,angle=270,origin=c]{conjoint.pdf}
-	\caption{\textbf{Example of conjoint experiment design.} We presented respondents with 7 binary choices similar to this one. The values for the six design principles were randomly sampled from our list of attributes. More information is available in the Supplementary Appendix.}
+	\includegraphics[width=16cm]{conjoint-cropped.pdf}
+	\caption{\textbf{Example of conjoint experiment design}}
 	\label{fig:conjoint}
 \end{figure}
+
+% Add paragraph about marginal means -- cite Leeper (2019).
+
+\section{Results}%
+\label{sec:results}
 
 Figure~\ref{fig:pooled} shows our main results. The findings indicate that Latin American elites have a strong preference for a polycentric approach to mitigate climate change. We see that the respondents have a positive view about two sources of climate governance, namely those located at the international and the local levels. Importantly, Latin American elites support both levels \textit{simultaneously}; this provides evidence that they favour agreements which incorporate action separate political spheres at the same time in the same regime. 
 
@@ -244,6 +258,4 @@ To view supplementary material for this article, please visit \href{http://githu
 \bibliography{references.bib}
 
 \end{document}
-
-
 
